fix: fix layout bug

--- a/themes/grimoire/source/css/index.styl
+++ b/themes/grimoire/source/css/index.styl
@@ -577,3 +577,6 @@ one-column-desc()
     height auto
   #description .front .title 
     font-size 18px
+
+.simple-code-container
+  pointer-events all
